# file-information

./: AGENTS.md  Cargo.toml  LICENSE.md  README.md  build.rs
debian/: postinst
resources/: file-information.desktop
scripts/: index_tmp_test.sh  index_tmp_test_min.sh  xvfb_screenshot.sh  xvfb_window_test.sh
src/: main.rs  options.rs
tests/: bootstrap_environment.sh  run_tests.sh
tests/graphical/: run_tests.sh  run_ui_test.py
