[package]
name = "file-information"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk   = { package = "gtk4",       version = "0.9" }
glib  = "0.20"
gio   = "0.20"
adw   = { package = "libadwaita", version = "0.7", features = ["v1_4"] }
gdk4 = "0.9"

tracker     = { package = "tracker-rs", version = "0.6" }
